# placeMate

./: README.md
backend/: .python-version  abhiJ.db  database.db  pyproject.toml  requirements.txt  server.py
backend/src/: .env  .gitignore  ai_generator.py  app.py  test_script.py
backend/src/database/: models.py
backend/src/routes/: challenge.py
frontend/: .env
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx
frontend/src/layout/: Layout.jsx
